--- a/.github/workflows/jftd-110-jfcli-node.yml
+++ b/.github/workflows/jftd-110-jfcli-node.yml
@@ -35,7 +35,7 @@ jobs:
         continue-on-error: true
         uses: actions/checkout@v4
 
-      # Start Lab 1.1 #########################################################
+      # Start Lab 1.1 - Setup Github OIDC Integration #########################################################
       # TODO: Lab 1.1 - Replace this commented section with the snippet from "Step 1: Create the Github OIDC Integration object in your JFrog Platform instance"
       # 
       # Instructions:
@@ -72,8 +72,12 @@ jobs:
         run: |
           echo "Access Token set as output to 'Get Artifactory Access Token and Setup JFrog CLI'"
 
-      # TODO: Lab 2.1 - Uncomment this step to configure npm registry with JFrog CLI
-      # 
+
+      # Start Lab 2 - Generate a Job Summary of Github Actions Workflow #########################################################
+      #
+      # TODO: Lab 2.1 - Step 1 - Configure npm with JFrog CLI
+      # NOTE - Uncomment this step to configure npm registry with JFrog CLI
+      #
       # Purpose: This step configures the npm registry to use JFrog Artifactory repositories
       # for both deployment and resolution. It sets up the npm configuration to point to
       # the virtual repository that combines local and remote npm repositories.
@@ -85,11 +89,11 @@ jobs:
       #
       # - name: "Config npm registry with JFrog CLI"
       #   run: |
-      #     pwd
       #     jf npmc --repo-deploy=${{ env.RT_REPO_NPM_VIRTUAL}} --repo-resolve=${{ env.RT_REPO_NPM_VIRTUAL}}
 
-      # TODO: Lab 2.2 - Uncomment this step to perform JFrog Curation audit
-      # 
+      # TODO: Lab 2.2 - Step 2 - Run JFrog Curation Audit
+      # NOTE - Uncomment this step to perform JFrog Curation audit
+      #
       # Purpose: This step performs a comprehensive security audit using JFrog Curation
       # to identify and analyze potential security vulnerabilities, license compliance
       # issues, and other security concerns in the npm dependencies.
@@ -100,12 +104,11 @@ jobs:
       # 3. The audit will run with table format output and 100 threads for efficiency
       #
       # - name: "Curation: audit" # https://docs.jfrog-applications.jfrog.io/jfrog-applications/jfrog-cli/cli-for-jfrog-security/cli-for-jfrog-curation
-      #   timeout-minutes: 15    # ref https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_idstepstimeout-minutes
-      #   continue-on-error: true    # ref: https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_idstepstimeout-minutes
       #   run: |
       #     jf ca --format=table --threads=100
   
-      # TODO: Lab 2.3 - Uncomment this step to perform Xray & JAS security audit
+      # TODO: Lab 2.3 - Step 3 - Run Depency Audit
+      # NOTE - Uncomment this step to perform Xray & Adv. security audit
       # 
       # Purpose: This step runs a comprehensive security scan using JFrog Xray and JAS
       # (JFrog Advanced Security) to detect vulnerabilities, secrets, SAST issues,
@@ -116,14 +119,12 @@ jobs:
       # 2. Uncomment this step to enable comprehensive security scanning
       # 3. The scan includes SAST, SCA, secrets detection, and vulnerability analysis
       #
-      # - name: "Xray & JAS: Audit"  # https://docs.jfrog-applications.jfrog.io/jfrog-applications/jfrog-cli/cli-for-jfrog-security
-      #   # scan for Xray: Source code dependencies and JAS: Secrets Detection, IaC, Vulnerabilities Contextual Analysis 'SAST'
-      #   timeout-minutes: 15  # ref: https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_idstepstimeout-minutes
-      #   continue-on-error: true    # ref: https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_idstepstimeout-minutes
+      # - name: "Security Audit"  # https://docs.jfrog-applications.jfrog.io/jfrog-applications/jfrog-cli/cli-for-jfrog-security
       #   run: |
-      #     jf audit --npm --sast=true --sca=true --secrets=true --licenses=true --validate-secrets=true --vuln=true --format=table --extended-table=true --threads=100 --fail=false
+      #     jf audit 
 
-      # TODO: Lab 2.4 - Uncomment this step to install npm dependencies
+      # TODO: Lab 2.4 - Step 4 - Install npm Dependencies
+      # NOTE - Uncomment this step to install npm dependencies
       # 
       # Purpose: This step installs npm dependencies using JFrog CLI, which tracks
       # the build information and associates all downloaded packages with the build
@@ -134,12 +135,13 @@ jobs:
       # 2. Uncomment this step to enable dependency installation
       # 3. The step will install dependencies and associate them with the build
       #
-      # - name: "Package: npm Build"   
+      # - name: "Install npm Dependencies"   
       #   continue-on-error: false
       #   run: |
-      #     jf npm install --build-name=${{ env.BUILD_NAME}} --build-number=${{ env.BUILD_ID}} 
+      #     jf npm install --build-name=${{ env.BUILD_NAME }} --build-number=${{ env.BUILD_ID }} 
      
-      # TODO: Lab 2.5 - Uncomment this step to publish npm package
+      # TODO: Lab 2.5 - Step 5 - Publish npm package to Artifactory with BuildInfo
+      # NOTE - Uncomment this step to publish npm package
       # 
       # Purpose: This step publishes the npm package to the configured JFrog repository,
       # making it available for other developers and builds while maintaining
@@ -150,29 +152,13 @@ jobs:
       # 2. Uncomment this step to enable package publishing
       # 3. The package will be published with build information for tracking
       #
-      # - name: "Package: npm publish"
+      # - name: "Publish npm package"
       #   continue-on-error: false
       #   run: |
-      #     jf npm publish --build-name=${{ env.BUILD_NAME}} --build-number=${{ env.BUILD_ID}} 
-
-      # TODO: Lab 2.6 - Uncomment this step to scan published npm artifacts
-      # 
-      # Purpose: This step scans the published npm artifacts using JFrog Xray to
-      # identify any security vulnerabilities, license issues, or compliance problems
-      # in the final package before it becomes available to consumers.
-      #
-      # Instructions:
-      # 1. Ensure package is published (from Lab 2.5)
-      # 2. Uncomment this step to enable artifact scanning
-      # 3. The scan will analyze the published package for security issues
-      #
-      # - name: "Package: Xray - npm Artifact scan"
-      #   timeout-minutes: 15  # ref: https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_idstepstimeout-minutes
-      #   continue-on-error: true    # ref: https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#jobsjob_idstepstimeout-minutes
-      #   run: |
-      #     jf scan . --format=table --extended-table=true --threads=100 --fail=false
+      #     jf npm publish --build-name=${{ env.BUILD_NAME }} --build-number=${{ env.BUILD_ID }} 
       
-      # TODO: Lab 2.7 - Uncomment this step to collect build environment information
+      # TODO: Lab 2.6 - Step 6 - Collect Environment Variables
+      # NOTE - Uncomment this step to collect build environment information
       # 
       # Purpose: This step collects environment variables and system information
       # from the GitHub Actions runner and associates it with the build for
@@ -183,26 +169,13 @@ jobs:
       # 2. Uncomment this step to enable environment collection
       # 3. Environment variables will be captured and stored with the build
       #
-      # - name: "BCE: Collect env"
-      #   continue-on-error: true
-      #   run: jf rt bce ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}} 
- 
-      # TODO: Lab 2.8 - Uncomment this step to add VCS (Git) information to build
-      # 
-      # Purpose: This step associates Git repository information (commit hash, branch,
-      # author, etc.) with the build, providing complete traceability between
-      # source code changes and build artifacts.
-      #
-      # Instructions:
-      # 1. Ensure repository is checked out and Git information is available
-      # 2. Uncomment this step to enable VCS information collection
-      # 3. Git metadata will be captured and stored with the build
-      #
-      # - name: "BAG: Add VCS info"
-      #   continue-on-error: true
-      #   run: jf rt bag ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}} 
+      # - name: "Collect env variables"
+      #   run: |
+      #     jf rt bce ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}}    # BCE (build-collect-env) - Collect environment variables and attach them to a build
+      #     jf rt bag ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}}    # BAG (build-add-git) - Collects VCS information (repository URL, branch, commit ID)
       
-      # TODO: Lab 2.9 - Uncomment this step to publish build information
+      # TODO: Lab 2.7 - Step 7 - Publish Build Information
+      # NOTE: Uncomment this step to publish build information
       # 
       # Purpose: This step publishes the complete build information to JFrog
       # Artifactory, including all dependencies, environment variables, VCS data,
@@ -213,47 +186,26 @@ jobs:
       # 2. Uncomment this step to enable build publishing
       # 3. Complete build information will be published to Artifactory
       #
-      # - name: "BP: Build Publish"  
-      #   continue-on-error: false
-      #   run: jf rt bp ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}} --detailed-summary=true
-      
+      # - name: "Publish BuildInfo"  
+      #   run: |
+      #     jf rt bp ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}} --detailed-summary=true   # BP (build-add-git) - To finalize and push build information (dependencies, artifacts, environment variables, etc.) to JFrog
 
-      # TODO: Lab 2.10 - Uncomment this step to add delay for synchronization
-      # 
+      
       # Purpose: This step adds a delay to ensure proper synchronization between
       # build publishing and subsequent operations, particularly important for
       # Xray scanning and other dependent processes.
-      #
-      # Instructions:
-      # 1. Ensure build is published (from Lab 2.9)
-      # 2. Uncomment this step to enable synchronization delay
-      # 3. The delay helps ensure all processes are properly synchronized
-      #
-      # - name: "Sleep for few seconds"
-      #   env: 
-      #     SLEEP_TIME: 30
-      #   run: |
-      #      echo "Sleeping for ${{env.SLEEP_TIME}} seconds..."
-      #      sleep ${{env.SLEEP_TIME}}  # Sleeping for 20 seconds before executing the build publish seems to have resolved the build-scan issue. This delay might be helping with synchronization or resource availability, ensuring a smooth build process.
-      #      echo "Awake now!"
+      - name: "Sleep for few seconds"
+        env: 
+           SLEEP_TIME: 30
+        run: |
+           echo "Sleeping for ${{env.SLEEP_TIME}} seconds..."
+           sleep ${{env.SLEEP_TIME}}  # Sleeping for 20 seconds before executing the build publish seems to have resolved the build-scan issue. This delay might be helping with synchronization or resource availability, ensuring a smooth build process.
+           echo "Awake now!"
 
-      # TODO: Lab 2.11 - Uncomment this step to query build scan status
-      # 
-      # Purpose: This step queries the current status of the build scan in Xray,
-      # providing visibility into the scanning process and allowing for monitoring
-      # of security analysis progress.
+    
+      # TODO: Lab 2.8 - Build Scan
+      # NOTE: Uncomment this step to perform final build scan
       #
-      # Instructions:
-      # 1. Ensure build is published and scan is initiated
-      # 2. Uncomment this step to enable scan status monitoring
-      # 3. The step will query and display current scan status
-      #
-      # - name: "Optional: Query - Build Scan status"
-      #   run: |
-      #     jf xr curl "/api/v1/build/status" -H 'Content-Type: application/json' -d '{"name": "${{env.BUILD_NAME}}", "number": "${{env.BUILD_ID}}" }'
-
-      # TODO: Lab 2.12 - Uncomment this step to perform final build scan
-      # 
       # Purpose: This step performs the final comprehensive scan of the build
       # using JFrog Xray, analyzing all components for vulnerabilities, license
       # issues, and compliance problems in the context of the complete build.
@@ -263,12 +215,10 @@ jobs:
       # 2. Uncomment this step to enable final build scanning
       # 3. The scan will provide comprehensive security analysis of the build
       #
-      # - name: "BuildInfo: Xray - Build scan"
-      #   timeout-minutes: 15   
-      #   continue-on-error: true  
+      # - name: "Build Scan"
       #   run: |
       #     jf bs ${{env.BUILD_NAME}} ${{env.BUILD_ID}} --fail=false --format=table --extended-table=true --rescan=false --vuln=true
 
-  
+      # End Lab 2 #########################################################
     
   
