--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@
 **/.jfrog/*
 JFTD-114*/admin/*
 **/JFTD-114*/admin/*
+/JFTD-114*/LAB-3/gpg-keys/
+/JFTD-114*/LAB-3/gpg-keys/*
+/JFTD-114*/LAB-3/keydetails
+/JFTD-114*/LAB-3/*.pem
+/JFTD-114*/LAB-3/java-app/target/
+/JFTD-114*/LAB-3/java-app/target/*
+.DS_Store
+**/.DS_Store
