--- a/JFTD-114-Compliant_SDLC_Without_Compromise/LAB-3/java-app/pom.xml
+++ b/JFTD-114-Compliant_SDLC_Without_Compromise/LAB-3/java-app/pom.xml
@@ -45,6 +45,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.14.0</version>
+				<configuration>
+					<release>8</release>
+					<source>8</source>
+					<target>8</target>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
