--- a/JFTD-114-Compliant_SDLC_Without_Compromise/LAB-3/java-app/pom.xml
+++ b/JFTD-114-Compliant_SDLC_Without_Compromise/LAB-3/java-app/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.jfrog.swampup</groupId>
 	<artifactId>jftd114</artifactId>
-	<version>2025.09.08</version>
+	<version>25.09.08-SNAPSHOT</version>
 	<name>Lab3Demo</name>
 	<description>Swampup 2025 Lab3 project using Spring Boot</description>
 	<url/>
