--- a/JFTD-114-Compliant_SDLC_Without_Compromise/LAB-1/java-app/pom.xml
+++ b/JFTD-114-Compliant_SDLC_Without_Compromise/LAB-1/java-app/pom.xml
@@ -11,17 +11,28 @@
 	<groupId>com.jfrog.swampup</groupId>
 	<artifactId>jftd114</artifactId>
 	<version>25.09.08-SNAPSHOT</version>
-	<name>Lab3Demo</name>
-	<description>Swampup 2025 Lab3 project using Spring Boot</description>
+	<name>Lab1Demo</name>
+	<description>Swampup 2025 Lab1 project</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-bom</artifactId>
+			<version>2.25.1</version>
+			<scope>import</scope>
+			<type>pom</type>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.25.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -30,7 +41,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>jftd114-lab3</finalName>
+		<finalName>jftd114-lab1</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
