--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,21 @@ JFTD-114*/admin/*
 /JFTD-114*/LAB-3/*.pem
 /JFTD-114*/LAB-3/java-app/target/
 /JFTD-114*/LAB-3/java-app/target/*
+/JFTD-114*/LAB-1/java-app/target/
+/JFTD-114*/LAB-1/java-app/target/*
+/JFTD-114*/*/java-app/target/*
 .DS_Store
 **/.DS_Store
+.github/.DS_Store
+JFTD-*/.DS_Store
 /JFTD-114*/**/.gradle
 /JFTD-114*/LAB-3/.gradle
+
+/JFTD-114*/LAB-1/.gradle
+/JFTD-114*/LAB-1/build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
