lab-1 with gpl 3.0

--- a/JFTD-114-Compliant_SDLC_Without_Compromise/LAB-1/java-app/pom.xml
+++ b/JFTD-114-Compliant_SDLC_Without_Compromise/LAB-1/java-app/pom.xml
@@ -18,16 +18,9 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-bom</artifactId>
-			<version>2.25.1</version>
-			<scope>import</scope>
-			<type>pom</type>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-			<version>2.25.1</version>
+			<groupId>org.neo4j.gds</groupId>
+			<artifactId>similarity-algorithms</artifactId>
+			<version>2.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
