--- a/.github/workflows/jftd-110-jfcli-node.yml
+++ b/.github/workflows/jftd-110-jfcli-node.yml
@@ -46,14 +46,14 @@ jobs:
       # 5. Copy the "Show Snippet" YAML configuration
       # 6. Replace this commented section with the copied snippet
       #
-      # - name: "Get Artifactory Access Token and Setup JFrog CLI"
-      #   uses: jfrog/setup-jfrog-cli@v4
-      #   id: setup-cli
-      #   env:
-      #     JF_URL: ${{vars.ARTIFACTORY_URL}}   # example: http://academy-artifactory.dzmfffgzzkmf.instruqt.io
-      #   with:
-      #     version: latest
-      #     oidc-provider-name: jfrog-githuboidc
+      - name: "Get Artifactory Access Token and Setup JFrog CLI"
+        uses: jfrog/setup-jfrog-cli@v4
+        id: setup-cli
+        env:
+          JF_URL: ${{vars.ARTIFACTORY_URL}}   # example: http://academy-artifactory.dzmfffgzzkmf.instruqt.io
+        with:
+          version: latest
+          oidc-provider-name: jfrog-githuboidc
       
       # End Lab 1.1 #########################################################
 
@@ -87,9 +87,9 @@ jobs:
       # 2. Uncomment this step to enable npm registry configuration
       # 3. The step will configure npm to use the lab110-npm-virtual repository
       #
-      # - name: "Config npm registry with JFrog CLI"
-      #   run: |
-      #     jf npmc --repo-deploy=${{ env.RT_REPO_NPM_VIRTUAL}} --repo-resolve=${{ env.RT_REPO_NPM_VIRTUAL}}
+      - name: "Config npm registry with JFrog CLI"
+        run: |
+          jf npmc --repo-deploy=${{ env.RT_REPO_NPM_VIRTUAL}} --repo-resolve=${{ env.RT_REPO_NPM_VIRTUAL}}
 
       # TODO: Lab 2.2 - Step 2 - Run JFrog Curation Audit
       # NOTE - Uncomment this step to perform JFrog Curation audit
@@ -119,9 +119,9 @@ jobs:
       # 2. Uncomment this step to enable comprehensive security scanning
       # 3. The scan includes SAST, SCA, secrets detection, and vulnerability analysis
       #
-      # - name: "Security Audit"  # https://docs.jfrog-applications.jfrog.io/jfrog-applications/jfrog-cli/cli-for-jfrog-security
-      #   run: |
-      #     jf audit 
+      - name: "Security Audit"  # https://docs.jfrog-applications.jfrog.io/jfrog-applications/jfrog-cli/cli-for-jfrog-security
+        run: |
+          jf audit 
 
       # TODO: Lab 2.4 - Step 4 - Install npm Dependencies
       # NOTE - Uncomment this step to install npm dependencies
@@ -135,10 +135,10 @@ jobs:
       # 2. Uncomment this step to enable dependency installation
       # 3. The step will install dependencies and associate them with the build
       #
-      # - name: "Install npm Dependencies"   
-      #   continue-on-error: false
-      #   run: |
-      #     jf npm install --build-name=${{ env.BUILD_NAME }} --build-number=${{ env.BUILD_ID }} 
+      - name: "Install npm Dependencies"   
+        continue-on-error: false
+        run: |
+          jf npm install --build-name=${{ env.BUILD_NAME }} --build-number=${{ env.BUILD_ID }} 
      
       # TODO: Lab 2.5 - Step 5 - Publish npm package to Artifactory with BuildInfo
       # NOTE - Uncomment this step to publish npm package
@@ -152,10 +152,10 @@ jobs:
       # 2. Uncomment this step to enable package publishing
       # 3. The package will be published with build information for tracking
       #
-      # - name: "Publish npm package"
-      #   continue-on-error: false
-      #   run: |
-      #     jf npm publish --build-name=${{ env.BUILD_NAME }} --build-number=${{ env.BUILD_ID }} 
+      - name: "Publish npm package"
+        continue-on-error: false
+        run: |
+          jf npm publish --build-name=${{ env.BUILD_NAME }} --build-number=${{ env.BUILD_ID }} 
       
       # TODO: Lab 2.6 - Step 6 - Collect Environment Variables
       # NOTE - Uncomment this step to collect build environment information
@@ -169,10 +169,10 @@ jobs:
       # 2. Uncomment this step to enable environment collection
       # 3. Environment variables will be captured and stored with the build
       #
-      # - name: "Collect env variables"
-      #   run: |
-      #     jf rt bce ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}}    # BCE (build-collect-env) - Collect environment variables and attach them to a build
-      #     jf rt bag ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}}    # BAG (build-add-git) - Collects VCS information (repository URL, branch, commit ID)
+      - name: "Collect env variables"
+        run: |
+          jf rt bce ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}}    # BCE (build-collect-env) - Collect environment variables and attach them to a build
+          jf rt bag ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}}    # BAG (build-add-git) - Collects VCS information (repository URL, branch, commit ID)
       
       # TODO: Lab 2.7 - Step 7 - Publish Build Information
       # NOTE: Uncomment this step to publish build information
@@ -186,9 +186,9 @@ jobs:
       # 2. Uncomment this step to enable build publishing
       # 3. Complete build information will be published to Artifactory
       #
-      # - name: "Publish BuildInfo"  
-      #   run: |
-      #     jf rt bp ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}} --detailed-summary=true   # BP (build-add-git) - To finalize and push build information (dependencies, artifacts, environment variables, etc.) to JFrog
+      - name: "Publish BuildInfo"  
+        run: |
+          jf rt bp ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}} --detailed-summary=true   # BP (build-add-git) - To finalize and push build information (dependencies, artifacts, environment variables, etc.) to JFrog
 
       
       # Purpose: This step adds a delay to ensure proper synchronization between
@@ -215,9 +215,9 @@ jobs:
       # 2. Uncomment this step to enable final build scanning
       # 3. The scan will provide comprehensive security analysis of the build
       #
-      # - name: "Build Scan"
-      #   run: |
-      #     jf bs ${{env.BUILD_NAME}} ${{env.BUILD_ID}} --fail=false --format=table --extended-table=true --rescan=false --vuln=true
+      - name: "Build Scan"
+        run: |
+          jf bs ${{env.BUILD_NAME}} ${{env.BUILD_ID}} --fail=false --format=table --extended-table=true --rescan=false --vuln=true
 
       # End Lab 2 #########################################################
     
