--- a/.github/workflows/jftd-110-jfcli-node.yml
+++ b/.github/workflows/jftd-110-jfcli-node.yml
@@ -46,14 +46,12 @@ jobs:
       # 5. Copy the "Show Snippet" YAML configuration
       # 6. Replace this commented section with the copied snippet
       #
-      - name: "Get Artifactory Access Token and Setup JFrog CLI"
+      - name: Setup JFrog CLI
         uses: jfrog/setup-jfrog-cli@v4
-        id: setup-cli
         env:
-          JF_URL: ${{vars.JF_URL}}   # example: http://academy-artifactory.dzmfffgzzkmf.instruqt.io
+          JF_URL: ${{ vars.JF_URL }}
         with:
-          version: latest
-          oidc-provider-name: jfrog-githuboidc
+          oidc-provider-name: swampup25/SwampUp2025@github
       
       # End Lab 1.1 #########################################################
 
