--- a/.github/workflows/jftd-110-jfcli-node.yml
+++ b/.github/workflows/jftd-110-jfcli-node.yml
@@ -49,7 +49,7 @@ jobs:
       # - name: Setup JFrog CLI
       #   uses: jfrog/setup-jfrog-cli@v4
       #   env:
-      #     JF_URL: ${{ vars.JF_URL }}
+      #     JF_URL: ${{ vars.ARTIFACTORY_URL }}
       #   with:
       #     oidc-provider-name: jfrog-githuboidc
       
