Update LAB-1 with config-api
<artifactId>config-api</artifactId>

--- a/JFTD-114-Compliant_SDLC_Without_Compromise/LAB-1/java-app/pom.xml
+++ b/JFTD-114-Compliant_SDLC_Without_Compromise/LAB-1/java-app/pom.xml
@@ -19,7 +19,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.neo4j.gds</groupId>
-			<artifactId>similarity-algorithms</artifactId>
+			<artifactId>config-api</artifactId>
 			<version>2.7.0</version>
 		</dependency>
 		<dependency>
