--- a/.github/workflows/jftd-110-jfcli-node.yml
+++ b/.github/workflows/jftd-110-jfcli-node.yml
@@ -92,9 +92,9 @@ jobs:
       # 2. Uncomment this step to enable npm registry configuration
       # 3. The step will configure npm to use the lab110-npm-virtual repository
       #
-      # - name: "Config npm registry with JFrog CLI"
-      #   run: |
-      #     jf npmc --repo-deploy=${{ env.RT_REPO_NPM_VIRTUAL}} --repo-resolve=${{ env.RT_REPO_NPM_VIRTUAL}}
+      - name: "Config npm registry with JFrog CLI"
+        run: |
+          jf npmc --repo-deploy=${{ env.RT_REPO_NPM_VIRTUAL}} --repo-resolve=${{ env.RT_REPO_NPM_VIRTUAL}}
 
       # TODO: Lab 2.2 - Step 2 - Run JFrog Curation Audit
       # NOTE - Uncomment this step to perform JFrog Curation audit
