--- a/.github/workflows/jftd-110-jfcli-node.yml
+++ b/.github/workflows/jftd-110-jfcli-node.yml
@@ -108,9 +108,9 @@ jobs:
       # 2. Uncomment this step to enable security auditing
       # 3. The audit will run with table format output and 100 threads for efficiency
       #
-      # - name: "Curation: audit" # https://docs.jfrog-applications.jfrog.io/jfrog-applications/jfrog-cli/cli-for-jfrog-security/cli-for-jfrog-curation
-      #   run: |
-      #     jf ca --format=table --threads=100
+      - name: "Curation: audit" # https://docs.jfrog-applications.jfrog.io/jfrog-applications/jfrog-cli/cli-for-jfrog-security/cli-for-jfrog-curation
+        run: |
+          jf ca --format=table --threads=100
   
       # TODO: Lab 2.3 - Step 3 - Run Depency Audit
       # NOTE - Uncomment this step to perform Xray & Adv. security audit
@@ -124,9 +124,9 @@ jobs:
       # 2. Uncomment this step to enable comprehensive security scanning
       # 3. The scan includes SAST, SCA, secrets detection, and vulnerability analysis
       #
-      # - name: "Security Audit"  # https://docs.jfrog-applications.jfrog.io/jfrog-applications/jfrog-cli/cli-for-jfrog-security
-      #   run: |
-      #     jf audit 
+      - name: "Security Audit"  # https://docs.jfrog-applications.jfrog.io/jfrog-applications/jfrog-cli/cli-for-jfrog-security
+        run: |
+          jf audit 
 
       # TODO: Lab 2.4 - Step 4 - Install npm Dependencies
       # NOTE - Uncomment this step to install npm dependencies
@@ -140,10 +140,10 @@ jobs:
       # 2. Uncomment this step to enable dependency installation
       # 3. The step will install dependencies and associate them with the build
       #
-      # - name: "Install npm Dependencies"   
-      #   continue-on-error: false
-      #   run: |
-      #     jf npm install --build-name=${{ env.BUILD_NAME }} --build-number=${{ env.BUILD_ID }} 
+      - name: "Install npm Dependencies"   
+        continue-on-error: false
+        run: |
+          jf npm install --build-name=${{ env.BUILD_NAME }} --build-number=${{ env.BUILD_ID }} 
      
       # TODO: Lab 2.5 - Step 5 - Publish npm package to Artifactory with BuildInfo
       # NOTE - Uncomment this step to publish npm package
@@ -157,10 +157,10 @@ jobs:
       # 2. Uncomment this step to enable package publishing
       # 3. The package will be published with build information for tracking
       #
-      # - name: "Publish npm package"
-      #   continue-on-error: false
-      #   run: |
-      #     jf npm publish --build-name=${{ env.BUILD_NAME }} --build-number=${{ env.BUILD_ID }} 
+      - name: "Publish npm package"
+        continue-on-error: false
+        run: |
+          jf npm publish --build-name=${{ env.BUILD_NAME }} --build-number=${{ env.BUILD_ID }} 
       
       # TODO: Lab 2.6 - Step 6 - Collect Environment Variables
       # NOTE - Uncomment this step to collect build environment information
@@ -174,10 +174,10 @@ jobs:
       # 2. Uncomment this step to enable environment collection
       # 3. Environment variables will be captured and stored with the build
       #
-      # - name: "Collect env variables"
-      #   run: |
-      #     jf rt bce ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}}    # BCE (build-collect-env) - Collect environment variables and attach them to a build
-      #     jf rt bag ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}}    # BAG (build-add-git) - Collects VCS information (repository URL, branch, commit ID)
+      - name: "Collect env variables"
+        run: |
+          jf rt bce ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}}    # BCE (build-collect-env) - Collect environment variables and attach them to a build
+          jf rt bag ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}}    # BAG (build-add-git) - Collects VCS information (repository URL, branch, commit ID)
       
       # TODO: Lab 2.7 - Step 7 - Publish Build Information
       # NOTE: Uncomment this step to publish build information
@@ -191,9 +191,9 @@ jobs:
       # 2. Uncomment this step to enable build publishing
       # 3. Complete build information will be published to Artifactory
       #
-      # - name: "Publish BuildInfo"  
-      #   run: |
-      #     jf rt bp ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}} --detailed-summary=true   # BP (build-add-git) - To finalize and push build information (dependencies, artifacts, environment variables, etc.) to JFrog
+      - name: "Publish BuildInfo"  
+        run: |
+          jf rt bp ${{ env.BUILD_NAME}} ${{ env.BUILD_ID}} --detailed-summary=true   # BP (build-add-git) - To finalize and push build information (dependencies, artifacts, environment variables, etc.) to JFrog
 
       
       # Purpose: This step adds a delay to ensure proper synchronization between
